--- a/src/style/style.css
+++ b/src/style/style.css
@@ -31,17 +31,16 @@ h1, h2 {
 }
 
 .darkTheme .colorButton {
-	margin: 0 5px;
-	filter: invert(.95) grayscale(.7);
+	filter: grayscale(1) invert(1);
 	user-select: none;
 }
 
 .darkTheme .colorButton:hover {
-	filter: invert(.95) grayscale(0);
+	filter: grayscale(1) invert(1) contrast(1.3);
 }
 
 .darkTheme .colorButton:active {
-	filter: invert(.95) contrast(3);
+	filter: grayscale(1) invert(1) contrast(2);
 }
 
 .vc-chrome {
