Added 3 pages. Added 1 article

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -6,18 +6,15 @@ html, body {
 
 }
 
-#colorApp {
-	width: 1235px;
-}
-
 .appContainer {
 	width: 100%;
 	display: flex;
 	justify-content: center;
+	min-width: 1235px;
 }
 
 h1, h2 {
-    font-weight: 400;
+  font-weight: 400;
 }
 
 .darkTheme {
